# spider

./: README.md  install.sh  requirements.txt  requirements.txt.bak  setup.cfg  setup.py
etc/spider/: spider.conf
resource/: dev3_id_rsa  id_rsa
spider/: ConfParser.py  RemoteHost.py  SSHClient.py  __init__.py  test.py  utils.py
spider/collector/: Collector.py
