[metadata]
name = spider
summary = Collecting Host information for Ceph Installer
description-file =
    README.md
author = liyankun
author-email = lioveni99@gmail.com
home-page = http://www.unitedstack.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: UnitedStack
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[entry_points]
console_scripts =
    spider = spider.collector.Collector:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[nosetests]
match=^test
where=spider
nocapture=1
cover-package=spider
cover-erase=1

[wheel]
universal = 1